# sara

./: .appveyor.yml  .clang-format  .codedocs  .coveralls.gitlab.yml  .coveralls.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .readthedocs.yml  .travis.yml  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  COPYING.README  COPYRIGHTS.md  CPACK_PACKAGING.README  Dockerfile  Gemfile  README.md  TODO.md  appveyor.yml  build-sara.sh  build.ps1  build.py  build.sh  conanfile.txt  copy-libraries.py  requirements.txt
cpp/: CMakeLists.txt
cpp/benchmark/: TODO.md
cpp/drafts/: CMakeLists.txt  Compute.hpp  Core.hpp  Expression.hpp  OpenCL.hpp
cpp/examples/: CMakeLists.txt
cpp/pipelines/: CMakeLists.txt  README.md  config.ini  detect_sift.cpp  estimate_camera_extrinsics.cpp  estimate_essential_matrices.cpp  estimate_fundamental_matrices.cpp  extract_exif.cpp  match_keypoints.cpp  memento.sh  perform_bundle_adjustment.cpp  sfm_pipeline.py  sfm_pipeline.sh  track_points.cpp  triangulate.cpp
cpp/test/: AssertHelpers.hpp  CMakeLists.txt
cpp/tools/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in  MainPage.dox  Makefile  make.bat  ref_doc_generation.py  rtd_doxyfile
doc/book/: _bookdown.yml  _output.yml  bibliography.Rmd  build.R  calibration.Rmd  datasets.Rmd  descriptors.Rmd  features.Rmd  font-config.tex  geometry_2d.Rmd  index.Rmd  install_deps.R  kalman_filter.Rmd  learning_halide.Rmd  learning_journey_in_R.Rmd  learning_journeys.Rmd  misc.Rmd  phd-utf8.bib  random.Rmd  sfm.Rmd  singleviewgeometry.Rmd
doc/doxygen/: CMakeLists.txt  Doxyfile.in
doc/ref_doc_templates/: index.rst  library.rst  module.rst  ref_doc_toc.rst
doc/rmd/: .Rhistory  01-geometry.Rmd  02-literature.Rmd  04-application.Rmd  06-kitti.Rmd  Dockerfile  _bookdown.yml  _output.yml  build.R  calibration.Rmd  computer_graphics.Rmd  datasets.Rmd  descriptors.Rmd  features.Rmd  geometry.Rmd  geometry_2d.Rmd  geometry_3d.Rmd  imu.Rmd  index.Rmd  learning_halide.Rmd  learning_journey_in_R.Rmd  learning_journeys.Rmd  literature.Rmd  phd-utf8.bib  sfm.Rmd  single_view_geometry.Rmd  style.css
doc/slides/: contents.Rmd  install_deps.R
doc/source/: conf.py  examples.rst  index.rst  ref_doc_generation.py  ref_doc_toc.rst  third_party_libraries.rst
doc/sphinx/: CMakeLists.txt  requirements.txt  rtd_requirements.txt
examples/Cuda/: CMakeLists.txt  cuda_test.cpp  cuda_test.cu  toy_test_cuda.cu
examples/FeatureDescriptors/: CMakeLists.txt  sift_example.cpp
examples/FeatureDetectors/: CMakeLists.txt  backup.cpp  diff_of_gaussian_example.cpp  difference_of_gaussians_example.cpp  harris_example.cpp  hessian_example.cpp  hessian_laplace_example.cpp  laplacian_of_gaussian_example.cpp  laplacian_of_gaussians_example.cpp
examples/Features/: CMakeLists.txt  features_read_write_example.cpp
examples/Geometry/: CMakeLists.txt  polygon_clipping_sutherland_hodgman_example.cpp  ramer_douglas_peucker_example.cpp
examples/Graphics/: CMakeLists.txt  dialog_box_example.cpp  drawing_example_1.cpp  drawing_example_2.cpp  example.cpp  example_4.cpp  example_5.cpp  example_9.cpp  image_example_1.cpp  image_example_2.cpp  image_example_3.cpp  interactive_viewer_example.cpp  keyboard_mouse_event_example_1.cpp  keyboard_mouse_event_example_2.cpp  keyboard_mouse_event_example_3.cpp  mesh_viewer_example.cpp  precompiled.hpp  window_management_example_1.cpp  window_management_example_2.cpp  window_management_example_3.cpp  window_management_example_4.cpp
examples/Shakti/: CMakeLists.txt  ImageProcessing.hpp  cuda_test.cpp  toy_test_cuda.h
examples/VideoIO/: CMakeLists.txt  video_read_example.cpp
python/: CMakeLists.txt  mkdocs.yml  sara.cpp  videoio.cpp
python/docs/: index.md
python/oddkiva/: __init__.py  combination.py
swift/: CMakeLists.txt  Graphics.swift  Image.swift  ImageIO.swift  ImageProcessing.swift  LinearAlgebra.swift  Macros.h  Tensor.swift  VideoIO.swift  hello_world.swift  main.swift  module.modulemap
swift/Core/: CCore.cpp  CCore.hpp  CMakeLists.txt  module.modulemap
swift/Graphics/: CGraphics.cpp  CGraphics.hpp  CMakeLists.txt  Graphics.cpp  Graphics.hpp  ImageIO.cpp  ImageIO.hpp  VideoIO.cpp  VideoIO.hpp  module.modulemap
swift/ImageProcessing/: CImageProcessing.cpp  CImageProcessing.hpp  CMakeLists.txt  module.modulemap
test/: AssertHelpers.hpp  CMakeLists.txt
test/Core/: AssertHelpers.hpp  CMakeLists.txt  CoreTesting.hpp  MultiArrayTestingFunctions.hpp  color_conversion.hpp  packed_pixel.hpp  pixel.hpp  test.cpp  test_Color.cpp  test_Defines.cpp  test_EigenExtension.cpp  test_Locator.cpp  test_Locator_2.cpp  test_MultiArray.cpp  test_Timer.cpp  test_Tree.cpp  test_array_iterator_basic_functions.cpp  test_array_iterator_classes.cpp  test_channel_conversion.cpp  test_color_conversion.cpp  test_core_array_iterator_basic_functions.cpp  test_core_array_iterator_classes.cpp  test_core_channel_conversion.cpp  test_core_color_conversion.cpp  test_core_debug_utilities.cpp  test_core_defines_and_macros.cpp  test_core_eigen_extension.cpp  test_core_image_class.cpp  test_core_image_operations.cpp  test_core_multiarray.cpp  test_core_packed_pixel.cpp  test_core_pixel.cpp  test_core_pixel_traits.cpp  test_core_pixel_typedefs.cpp  test_core_smart_color_conversion.cpp  test_core_subimage.cpp  test_core_timer.cpp  test_core_tree.cpp  test_eigen_extension.cpp  test_image_class.cpp  (+11 more)
test/DisjointSets/: test_disjointsets_algorithm.cpp
test/FeatureDescriptors/: CMakeLists.txt  test_DAISY.cpp  test_SIFT.cpp  test_featuredescriptors_sift.cpp
test/FeatureDetectorWrappers/: CMakeLists.txt  test_Wrappers.cpp
test/FeatureDetectors/: CMakeLists.txt  backup.cpp  test.haraffkey  test_AffineAdaptation.cpp  test_DoG.cpp  test_Harris.cpp  test_Hessian.cpp  test_LoG.cpp  test_SIFT.cpp  test_Wrappers.cpp  test_affine_adaptation.cpp
test/FeatureMatching/: CMakeLists.txt  GuardOnBlonde.tif  test.cpp  test_feature_matching.cpp  test_featurematching_key_proximity.cpp  test_featurematching_matching.cpp
test/Features/: CMakeLists.txt  test.cpp  test.dogkey  test.haraffkey  test.mserkey  test_features.cpp  (+1 more)
(+4997 files in other folders)
